--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
 
 :root {
   /* Light */
@@ -45,6 +45,11 @@ a:hover { color: var(--primary); transition: color .2s ease; }
 html, body, #root { height: 100%; }
 body {
   margin: 0;
+  font-family: "Merriweather", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   color: var(--text);
   background: var(--bg);
   -webkit-font-smoothing: antialiased;
